--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ header{
 
 .modal__tel{
   width: 100%;
-  height: 852px;
+  height: 853px;
   z-index: 100;
   justify-content: center;
   align-items:center;
@@ -153,8 +153,10 @@ header{
 }
 
 .modal__tel__contnet{
-	padding: 303px 529px 244px 19px;
+	padding: 0px 522px 244px 19px;
+
 }
+
 
 #close{
 	margin-top: 7px;
@@ -168,6 +170,8 @@ header{
 	letter-spacing: 0.01em;
 	color: rgba(0, 0, 0, 0.74);
 }
+
+
 
 .madal__tel__button__tel{
   padding: 37px 57px 159px 65px;
@@ -201,7 +205,8 @@ header{
 }
 
 .modal__button{
-  padding: 160px 160px 50px 163px;
+  margin-top: 140px;
+  margin-left: 164px;
 }
 
 #phone{
@@ -530,6 +535,18 @@ header{
 	margin-top:30px;
 }
 
+.section4__img1{
+	margin-top: 35px;
+}
+
+.section4__img2{
+	margin-top: 38px;
+}
+
+.section4__img4{
+	margin-top: 41px;
+}
+
 footer{
 	width: 100%;
 	height: 600px;
@@ -572,7 +589,10 @@ footer{
 	margin-top: 15px;
 }
 
-
+.footer__img img{
+		height: 60px;
+		object-fit: contain;
+	}
 
 @media all and (max-width: 600px){
 
@@ -1082,14 +1102,6 @@ footer{
 		left: 812px;
 	}
 
-	.section1__box1, .section1__box2, .section1__box3,
-	 .section1__box4, 
-	.section1__box5, .section1__box6, 
-	.section1__box7, .section1__box8, .section1__box9,
-	 .section1__box10, .section1__box11{
-	 	margin-top: 5px;
-	 }
-
 	 .section2__content__text p {
     	width: 993px;
     }
@@ -1111,7 +1123,7 @@ footer{
     }
 
     .header__content__part1__part2 h1 {
-    font-size: 31px;
+    font-size: 27px;
 	}
 
 	.header__content__part1__part3 {
